--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "node-forge": "^0.10.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3"
