--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git",
+  "name": "eugeniu.nosync",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,24 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.20.0",
-    "bootstrap": "^4.5.2",
-    "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
-    "jquery": "^3.5.1",
-    "node-forge": "^0.10.0",
-    "popper.js": "^1.16.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.4.3"
+    "vue": "^3.0.0-0",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0-0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2"
   },
   "eslintConfig": {
     "root": true,
@@ -33,7 +32,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
     "parserOptions": {
